# util_mzMLExplorer

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  run.bat  run.sh  update.bat
cpp/: CMakeLists.txt  build.bat  build.sh
cpp/src/: CompoundImportDialog.cpp  CompoundImportDialog.h  CompoundManager.cpp  CompoundManager.h  EICWindow.cpp  EICWindow.h  FileExplorerWindow.cpp  FileExplorerWindow.h  FileManager.cpp  FileManager.h  FormulaTools.cpp  FormulaTools.h  MS1Window.cpp  MS1Window.h  MSMSWindow.cpp  MSMSWindow.h  MainWindow.cpp  MainWindow.h  MultiAdductWindow.cpp  MultiAdductWindow.h  MzMLReader.cpp  MzMLReader.h  SharedWidgets.cpp  SharedWidgets.h  Utils.cpp  Utils.h  main.cpp
src/mzmlexplorer/: FormulaTools.py  __init__.py  compound_import_dialog.py  compound_info_fetcher.py  compound_manager.py  eic_window.py  file_manager.py  main.py  multi_adduct_window.py  style.css  utils.py  window_eic.py  window_file_explorer.py  window_game.py  window_ms1.py  window_msms.py  window_multi_adduct.py  window_shared.py  windows.py
