[project]
name = "util-mzmlexplorer"
version = "5.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pymzml>=2.5.11",
    "pyqt6>=6.9.1",
    "pyqt6-charts>=6.8.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "openpyxl>=3.1.0",
    "natsort>=8.0.0",
    "psutil>=5.9.0",
    "matplotlib>=3.10.6",
    "seaborn>=0.13.2",
]

[project.scripts]
mzmlexplorer = "mzmlexplorer.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mzmlexplorer"]

