[project]
name = "util-mzmlexplorer"
version = "7.8.0"
description = "mzmlexplorer - a python tool for compound-centric LC-HRMS data exploration"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pymzml>=2.5.11",
    "pyqt6>=6.9.1",
    "pyqt6-charts>=6.8.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "openpyxl>=3.1.0",
    "natsort>=8.0.0",
    "psutil>=5.9.0",
    "matplotlib>=3.10.6",
    "seaborn>=0.13.2",
    "scipy>=1.10.0",
    "toml>=0.10.2",
    "scikit-learn>=1.3.0",
    "rdkit>=2025.9.6",
    "matchms>=0.32.0",
]

[project.scripts]
mzmlexplorer = "mzmlexplorer.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mzmlexplorer"]

[tool.ruff]
line-length = 180
